--- a/main.css
+++ b/main.css
@@ -79,6 +79,7 @@
   border-radius: 2px;
   border: 1px solid #cbd1d4;
   font: 16px sans-serif;
+  resize: vertical;
 }
 
 .message-form__textarea:focus {
