--- a/main.css
+++ b/main.css
@@ -1,8 +1,6 @@
 .message-form-holder {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  position: relative;
+  height: 100vh;
   background-color: #dedede;
 }
 
@@ -14,7 +12,10 @@
   border-radius: 2px;
   box-shadow: rgba(0,0,0,0.1) 0px 0px 30px;
   background-color: #fff;
-  position: relative;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 .message-form-icon-holder {
@@ -93,7 +94,7 @@
   margin-right: 0;
   height: 50px;
   padding: 0 30px;
-  background-color: #fc4d5eff;
+  background-color: #fc4d5e;
   border-radius: 2px;
   border: none;
   outline: none;
