--- a/main.css
+++ b/main.css
@@ -5,13 +5,17 @@
 }
 
 .message-form {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 800px;
   padding: 70px 90px;
   border: 1px solid #cbd1d4;
   border-radius: 2px;
+  -webkit-box-shadow: rgba(0,0,0,0.1) 0px 0px 30px;
   box-shadow: rgba(0,0,0,0.1) 0px 0px 30px;
   background-color: #fff;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   position: absolute;
   top: 50%;
@@ -48,11 +52,15 @@
 }
 
 .message-form-inputs-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0 -10px;
 }
 
 .message-form-inputs-col {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
   margin: 0 10px;
 }
@@ -61,6 +69,7 @@
   width: 100%;
   height: 60px;
   padding: 18px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 2px;
   border: 1px solid #cbd1d4;
@@ -76,6 +85,7 @@
   width: 100%;
   height: 200px;
   padding: 15px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 2px;
   border: 1px solid #cbd1d4;
