--- a/main.css
+++ b/main.css
@@ -55,14 +55,13 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 -10px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .message-form-inputs-col {
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
-  margin: 0 10px;
+  width: calc(50% - 10px);
 }
 
 .message-form__input {
